--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,11 +11,10 @@ html, body {
     height: 512px; 
     width: 896px;
     padding: 0;
-    background-color: #000;
-    /* overflow: hidden;
+    overflow: hidden;
     overflow-y: hidden;
     overflow-x: hidden;
-    overscroll-behavior: none;  */
+    overscroll-behavior: none; 
 }
 
 /*=========================================================
